# file_set_tool

./: LICENSE  README.md  build_file_set_tool.cmd  main.py  pyproject.toml  requirements.txt
scripts/: demo_run.cmd  fst
src/: app_options.py  file_set_tool.py  file_set_tool_exceptions.py  git_status.py  print_colors.py  serializers.py
test/: test_app_options.py  test_file_set_tool.py
test/data/: test_options_1.json
test_dirs/test1/: test1.cmd  test1.json
test_dirs/test1/dest/1/: dummy_1.py
test_dirs/test1/dest/1/a/: dummy_1_a.py
test_dirs/test1/dest/2/: dummy_2.py
test_dirs/test1/dest/2/x/: dummy_2_x.py
test_dirs/test1/dest/2/y/: dummy_2_y.py
test_dirs/test1/dest/2/z/: dummy_2_z.py
test_dirs/test1/source/1/: dummy_1.py
test_dirs/test1/source/1/a/: dummy_1_a.py
test_dirs/test1/source/2/: dummy_2.py
test_dirs/test1/source/2/x/: dummy_2_x.py  ignore.txt
test_dirs/test1/source/2/y/: dummy_2_y.py
test_dirs/test1/source/2/z/: dummy_2_z.py
test_dirs/test2/: test_git.json
test_dirs/test2/dest/: git_status.py  info.json  info.toml  info.yaml
test_dirs/test2/dest/src/Common/: ArgumentBuilder.cs  added.cs
